--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    continue-on-error: true  # Don't fail the build on linting issues
     steps:
     - uses: actions/checkout@v4
     
@@ -59,7 +60,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [test, lint]
+    needs: [test]
     strategy:
       matrix:
         goos: [linux, darwin, windows]
